# CarbonLedger

./: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
src/app/: manage.py
src/app/green_web/: asgi.py  settings.py  urls.py  wsgi.py
src/app/transactions/: admin.py  forms.py  models.py  urls.py  views.py
src/app/transactions/fixtures/: sample_data.json
src/app/transactions/migrations/: 0001_initial.py  0002_transaction_category.py  0003_project_userprofile_transaction_project.py  0004_alter_userprofile_theme.py  0005_projectmember.py  0006_alter_transaction_date.py
src/app/transactions/static/css/: base.css  confirm-modal.css  home.css  login.css  projects.css  settings.css  tabs.css
src/app/transactions/static/js/: confirm-modal.js
src/app/transactions/templates/transactions/: account.html  base.html  home.html  login.html  project_configuration.html  project_reporting.html  project_summary.html  project_team.html  projects.html  register.html  settings.html
src/engine/: README.md  main.py
tests/: test_main.py
